# yororen-ui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  README_zh_CN.md  SECURITY.md  THEMING.md
crates/yororen-ui/: Cargo.toml
crates/yororen-ui-brutalism-renderer/: Cargo.toml
crates/yororen-ui-brutalism-renderer/src/: lib.rs  style.rs
crates/yororen-ui-brutalism-renderer/src/renderers/: actions.rs  controls.rs  display.rs  inputs.rs  lists.rs  mod.rs  notifications.rs  overlays.rs  surfaces.rs
crates/yororen-ui-brutalism-renderer/themes/: brutalism-dark.json  brutalism-light.json
crates/yororen-ui-core/: Cargo.toml  build.rs
crates/yororen-ui-core/locales/: ar.json  zh-CN.json
crates/yororen-ui-core/src/: assets.rs  constants.rs  hooks.rs  hover_refresh.rs  lib.rs  rtl.rs
crates/yororen-ui-core/src/a11y/: aria.rs  click_outside.rs  focus_trap.rs  keyboard_nav.rs  mod.rs  scroll_lock.rs
crates/yororen-ui-core/src/animation/: config.rs  constants.rs  easing.rs  helpers.rs  mod.rs  orchestrator.rs  preset.rs  timing.rs
crates/yororen-ui-core/src/component/: avatar.rs  badge.rs  bounds_tracker.rs  button.rs  button_group.rs  callback.rs  card.rs  checkbox.rs  clickable_surface.rs  combo_box.rs  context_menu_trigger.rs  disclosure.rs  dismiss_behavior.rs  divider.rs  drag_handle.rs  dropdown_menu.rs  empty_state.rs  file_path_input.rs  focus_ring.rs  form.rs  has_variant.rs  heading.rs  helpers.rs  icon.rs  icon_button.rs  image.rs  keybinding_display.rs  keybinding_input.rs  label.rs  list_item.rs  mod.rs  modal.rs  modal_shell.rs  number_input.rs  overlay.rs  panel.rs  popover.rs  progress.rs  radio.rs  radio_group.rs  (+22 more)
crates/yororen-ui-core/src/composite/: combo_box.rs  dropdown_menu.rs  mod.rs  modal.rs  popover.rs  select.rs  tooltip.rs
crates/yororen-ui-core/src/headless/: avatar.rs  badge.rs  button.rs  button_group.rs  card.rs  checkbox.rs  clickable_surface.rs  combo_box.rs  context_menu_trigger.rs  disclosure.rs  divider.rs  drag_handle.rs  dropdown_menu.rs  empty_state.rs  file_path_input.rs  focus_ring.rs  form.rs  form_field.rs  heading.rs  icon.rs  icon_button.rs  image.rs  keybinding_display.rs  keybinding_input.rs  label.rs  list_item.rs  list_navigable.rs  listbox.rs  menu.rs  mod.rs  modal.rs  number_input.rs  overlay.rs  panel.rs  password_input.rs  popover.rs  progress.rs  radio.rs  radio_group.rs  search_input.rs  (+20 more)
crates/yororen-ui-core/src/i18n/: defaults.rs  loader.rs  locale.rs  mod.rs  placeholder.rs  runtime.rs  translate.rs
crates/yororen-ui-core/src/notification/: README.md  center.rs  host.rs  mod.rs
crates/yororen-ui-core/src/renderer/: avatar.rs  badge.rs  button.rs  button_group.rs  card.rs  checkbox.rs  combo_box.rs  component_renderer.rs  context.rs  disclosure.rs  divider.rs  dropdown_menu.rs  empty_state.rs  file_path_input.rs  focus_ring.rs  form.rs  form_field.rs  heading.rs  icon.rs  icon_button.rs  image.rs  keybinding_display.rs  keybinding_input.rs  label.rs  list_item.rs  listbox.rs  markers.rs  menu.rs  mod.rs  modal.rs  notification.rs  number_input.rs  overlay.rs  panel.rs  password_input.rs  popover.rs  progress.rs  radio.rs  radio_group.rs  registry.rs  (+21 more)
crates/yororen-ui-core/src/theme/: mod.rs  path.rs  tokens.rs  validate.rs
crates/yororen-ui-core/src/widget/: mod.rs  titlebar.rs  virtual_list.rs
crates/yororen-ui-default-renderer/: Cargo.toml
crates/yororen-ui-default-renderer/src/: animation.rs  lib.rs  themes.rs
crates/yororen-ui-default-renderer/src/renderers/: avatar.rs  badge.rs  button.rs  button_group.rs  card.rs  checkbox.rs  combo_box.rs  disclosure.rs  divider.rs  dropdown_menu.rs  empty_state.rs  file_path_input.rs  focus_ring.rs  form.rs  form_field.rs  heading.rs  icon.rs  icon_button.rs  image.rs  keybinding_display.rs  keybinding_input.rs  label.rs  list_item.rs  listbox.rs  menu.rs  mod.rs  modal.rs  notification.rs  number_input.rs  overlay.rs  panel.rs  password_input.rs  popover.rs  progress.rs  radio.rs  radio_group.rs  registry.rs  search_input.rs  select.rs  shortcut_hint.rs  (+19 more)
crates/yororen-ui-default-renderer/themes/: system-dark.json  system-light.json
crates/yororen-ui-demos/counter/: Cargo.toml
crates/yororen-ui-demos/counter/src/: counter_app.rs  main.rs  state.rs
crates/yororen-ui-demos/gallery_demo/: Cargo.toml
crates/yororen-ui-demos/gallery_demo/src/: gallery_app.rs  i18n.rs  main.rs  notifications_host.rs  state.rs
crates/yororen-ui-demos/gallery_demo/translations/: ar.json  en.json  zh-CN.json
crates/yororen-ui-demos/gallery_xml/: Cargo.toml
crates/yororen-ui-demos/i18n_showcase/: Cargo.toml
crates/yororen-ui-demos/meta/: Cargo.toml
crates/yororen-ui-demos/showcase_xml/: Cargo.toml
crates/yororen-ui-demos/theme_compare/: Cargo.toml
crates/yororen-ui-demos/theme_showcase/: Cargo.toml
crates/yororen-ui-demos/toast_notification/: Cargo.toml
crates/yororen-ui-demos/variant_showcase/: Cargo.toml
crates/yororen-ui-locale-ar/: Cargo.toml
crates/yororen-ui-locale-ar/src/: lib.rs
crates/yororen-ui-locale-ar/translations/: ar.json
crates/yororen-ui-locale-en/: Cargo.toml
crates/yororen-ui-locale-en/src/: lib.rs
crates/yororen-ui-locale-en/translations/: en.json
crates/yororen-ui-theme-catppuccin/: Cargo.toml
crates/yororen-ui-theme-catppuccin/src/: factories.rs  lib.rs  palette.rs  renderer.rs  snapshot.rs  variant.rs
crates/yororen-ui-theme-material/: Cargo.toml
crates/yororen-ui-theme-material/src/: factories.rs  lib.rs  palette.rs  renderer.rs
crates/yororen-ui-theme-mini/: Cargo.toml
crates/yororen-ui-theme-mini/src/: lib.rs
crates/yororen-ui-theme-system/: Cargo.toml
crates/yororen-ui-theme-system/src/: dark.rs  lib.rs  light.rs
crates/yororen-ui-xml/: Cargo.toml  overrides.toml
crates/yororen-ui-xml-macro/: Cargo.toml
crates/yororen-ui-xml-macro/src/: lib.rs
crates/yororen-ui-xml/benches/: codegen_bench.rs
crates/yororen-ui-xml/src/: ast.rs  class.rs  codegen.rs  error.rs  lib.rs  parser.rs  runtime.rs  schema.rs  schema_generated.rs
crates/yororen-ui/src/: lib.rs
scripts/: publish.sh  (+2 more)
(+258 files in other folders)
