[workspace]
resolver = "2"
# Note: every `gpui = { package = "gpui-ce" ... }` dependency in this
# workspace points at a third-party fork of the upstream `gpui` crate
# (https://github.com/zed-industries/zed/tree/main/crates/gpui). The
# fork exposes the same public API but is published under a
# different name so a host app can pin to a specific version of
# the UI layer independently of the core zed gpui version. See
# `yororen-ui-core/Cargo.toml` for the canonical dep entry.
members = [
    "crates/yororen-ui",
    "crates/yororen-ui-core",
    "crates/yororen-ui-default-renderer",
    "crates/yororen-ui-mini-renderer",
    "crates/yororen-ui-locale-en",
    "crates/yororen-ui-locale-zh-CN",
    "crates/yororen-ui-locale-ar",
    "crates/yororen-ui-demos/counter",
]
# Demos other than `counter` are still on the v0.2 component
# shape and don't compile against the v0.3 headless API. They
# stay excluded until each is ported.
exclude = [
    "crates/yororen-ui-demos/flavor_gallery",
    "crates/yororen-ui-demos/theme_compare",
    "crates/yororen-ui-demos/theme_showcase",
    "crates/yororen-ui-demos/variant_showcase",
    "crates/yororen-ui-demos/todolist",
    "crates/yororen-ui-demos/file_browser",
    "crates/yororen-ui-demos/popover_placement",
    "crates/yororen-ui-demos/tree_expanded",
    "crates/yororen-ui-demos/toast_notification",
    "crates/yororen-ui-demos/headless demo",
    "crates/yororen-ui-demos/i18n_showcase",
    "crates/yororen-ui-demos/modal_a11y",
    "crates/yororen-ui-demos/meta",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/MeowLynxSea/yororen-ui"

# Demos inherit workspace lints via `[lints] workspace = true` in each demo
# Cargo.toml. Strict clippy is enforced — fix issues instead of disabling.
