[package]
name = "yororen_ui_brutalism_renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neo-brutalism style renderer for yororen-ui. Sharp corners, thick black borders, hard offset shadows, monospace typography, high-contrast solid colors. Implements all 54 XxxRenderer traits as a complete alternative to the default renderer."
readme = "../../README.md"
repository.workspace = true

[dependencies]
yororen-ui-core = { package = "yororen_ui_core", path = "../yororen-ui-core", version = "0.3" }
yororen-ui-default-renderer = { package = "yororen_ui_default_renderer", path = "../yororen-ui-default-renderer", version = "0.3" }
gpui = { package = "gpui-ce", version = "0.3" }
