[package]
name = "yororen_ui_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless UI primitives, animation, a11y, RTL, and i18n mechanism for gpui-based apps. Theme tokens live in DesignTokens; no default theme ships here."
readme = "../../README.md"
repository.workspace = true

[dependencies]
gpui = { package = "gpui-ce", version = "0.3" }

rust-embed = "8.11"
smallvec = "1"
stacksafe = "1"
unicode-segmentation = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
