[package]
name = "yororen_ui_locale_en"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "English (en) translation catalog for yororen-ui components. Bundles the JSON at compile time."
repository.workspace = true

[dependencies]
yororen-ui-core = { package = "yororen_ui_core", path = "../yororen-ui-core" }
gpui = { package = "gpui-ce", version = "0.3" }
serde_json = "1"
