[package]
name = "yororen_ui_theme_catppuccin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Catppuccin (Latte / Frappé / Macchiato / Mocha) theme package for yororen-ui. Demonstrates Renderer trait-driven skinning with a real-world palette."
repository.workspace = true
readme = "../../README.md"

[dependencies]
yororen-ui-renderer = { package = "yororen_ui_renderer", path = "../yororen-ui-renderer", version = "0.3" }
yororen-ui-core = { package = "yororen_ui_core", path = "../yororen-ui-core", version = "0.3" }
yororen-ui-theme-system = { package = "yororen_ui_theme_system", path = "../yororen-ui-theme-system", version = "0.3" }
gpui = { package = "gpui-ce", version = "0.3" }
