[package]
name = "yororen_ui_theme_material"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Material Design 3 (simplified) theme package for yororen-ui. Demonstrates a second official theme using a Material 3 visual language layered on top of the core Renderer trait system."
repository.workspace = true
readme = "../../README.md"

[dependencies]
yororen-ui-renderer = { package = "yororen_ui_renderer", path = "../yororen-ui-renderer", version = "0.3" }
yororen-ui-core = { package = "yororen_ui_core", path = "../yororen-ui-core", version = "0.3" }
yororen-ui-theme-system = { package = "yororen_ui_theme_system", path = "../yororen-ui-theme-system", version = "0.3" }
gpui = { package = "gpui-ce", version = "0.3" }
