[package]
name = "yororen_ui_theme_system"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Default light/dark theme for yororen-ui. Provides a neutral (no-brand) palette and a one-line install helper."
readme = "../../README.md"
repository.workspace = true

[dependencies]
yororen-ui-renderer = { package = "yororen_ui_renderer", path = "../yororen-ui-renderer", version = "0.3" }
yororen-ui-core = { package = "yororen_ui_core", path = "../yororen-ui-core", version = "0.3" }
gpui = { package = "gpui-ce", version = "0.3" }
