[package]
name = "yororen_ui_xml_macro"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc-macro crate providing the `xml!` and `xml_file!` macros for yororen-ui."
readme = "../../README.md"
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
yororen-ui-xml = { package = "yororen_ui_xml", path = "../yororen-ui-xml", version = "0.3" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
