[package]
name = "yororen_ui_xml"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compile-time XML UI layer for yororen-ui. Provides the `xml!` proc-macro and supporting schema/parser/codegen used by the yororen-ui-xml-macro crate."
readme = "../../README.md"
repository.workspace = true

[dependencies]
yororen-ui-core = { package = "yororen_ui_core", path = "../yororen-ui-core", version = "0.3" }
gpui = { package = "gpui-ce", version = "0.3" }
roxmltree = "0.20"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"
