[package]
name = "yororen_ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reusable UI components and widgets built on top of gpui. Meta-crate that re-exports core + system theme + 13 universal icons."
readme = "../README.md"
repository.workspace = true

[dependencies]
yororen-ui-core = { package = "yororen_ui_core", path = "../yororen-ui-core", version = "0.3" }
yororen-ui-theme-system = { package = "yororen_ui_theme_system", path = "../yororen-ui-theme-system", version = "0.3" }
gpui = { package = "gpui-ce", version = "0.3" }
