[package]
name = "yororen_ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reusable UI components and widgets built on top of gpui. Meta-crate that re-exports core + system theme + 13 universal icons."
readme = "../../README.md"
repository.workspace = true

[dependencies]
yororen-ui-core = { package = "yororen_ui_core", path = "../yororen-ui-core", version = "0.3" }
yororen-ui-theme-system = { package = "yororen_ui_theme_system", path = "../yororen-ui-theme-system", version = "0.3" }
yororen-ui-theme-catppuccin = { package = "yororen_ui_theme_catppuccin", path = "../yororen-ui-theme-catppuccin", version = "0.3", optional = true }
yororen-ui-theme-material = { package = "yororen_ui_theme_material", path = "../yororen-ui-theme-material", version = "0.3", optional = true }
yororen-ui-locale-en = { package = "yororen_ui_locale_en", path = "../yororen-ui-locale-en", version = "0.3" }
yororen-ui-locale-zh-cn = { package = "yororen_ui_locale_zh_cn", path = "../yororen-ui-locale-zh-CN", version = "0.3" }
yororen-ui-locale-ar = { package = "yororen_ui_locale_ar", path = "../yororen-ui-locale-ar", version = "0.3" }
gpui = { package = "gpui-ce", version = "0.3" }

[features]
default = ["catppuccin", "material"]
catppuccin = ["dep:yororen-ui-theme-catppuccin"]
material = ["dep:yororen-ui-theme-material"]
