[package]
name = "counter-demo"
version = "0.1.0"
edition.workspace = true
# Demo / example binary — never published to crates.io.
publish = false

[dependencies]
gpui = { package = "gpui-ce", version = "0.3" }
yororen-ui = { package = "yororen_ui", path = "../../yororen-ui" }


[lints]
workspace = true
