[package]
name = "i18n-showcase-demo"
version = "0.1.0"
edition.workspace = true

[dependencies]
gpui = { package = "gpui-ce", version = "0.3" }
yororen-ui = { package = "yororen_ui", path = "../../yororen-ui" }
yororen-ui-theme-system = { package = "yororen_ui_theme_system", path = "../../yororen-ui-theme-system" }
yororen-ui-locale-en = { package = "yororen_ui_locale_en", path = "../../yororen-ui-locale-en" }
yororen-ui-locale-zh-cn = { package = "yororen_ui_locale_zh_cn", path = "../../yororen-ui-locale-zh-CN" }
yororen-ui-locale-ar = { package = "yororen_ui_locale_ar", path = "../../yororen-ui-locale-ar" }
