[package]
name = "theme-showcase-demo"
version = "0.1.0"
edition.workspace = true
# Demo / example binary — never published to crates.io.
publish = false

[dependencies]
gpui = { package = "gpui-ce", version = "0.3" }
yororen-ui = { package = "yororen_ui", path = "../../yororen-ui" }
yororen-ui-default-renderer = { package = "yororen_ui_default_renderer", path = "../../yororen-ui-default-renderer" }

[lints]
workspace = true
