[package]
name = "variant-showcase-demo"
version = "0.1.0"
edition.workspace = true

[dependencies]
gpui = { package = "gpui-ce", version = "0.3" }
yororen-ui = { package = "yororen_ui", path = "../../yororen-ui" }
yororen-ui-theme-system = { package = "yororen_ui_theme_system", path = "../../yororen-ui-theme-system" }
yororen-ui-locale-en = { package = "yororen_ui_locale_en", path = "../../yororen-ui-locale-en" }
